@@ -1,3 +1,6 @@
+  - Fix Message::Passing::Input::FileTail to not die if the tail process
+    is killed for any reason. It is instead re-spawned.. RT#78851
+
 0.100
   - Port the dist to Moo, so that the core of Message::Passing
     uses no XS code. Components can still be written using full
